fixing content jumping

--- a/src/App.css
+++ b/src/App.css
@@ -340,7 +340,7 @@ a {
   .linkLink {
     height: 70px;
     width: 80px;
-    margin-left: 30%;
+    margin-left: 8%;
   }
 
   .firstContainer {
